spacing fixes

--- a/medweb/static/css/home.scss
+++ b/medweb/static/css/home.scss
@@ -158,13 +158,12 @@ p {
     }
     
     .sb-title{
-        margin-bottom: 40px;
+        margin-bottom: 20px;
     }
     .main-points{   
         .main-points-block{
             padding-left: 5px;
             padding-right: 5px;
-            padding-bottom: 30px;
             
             
             h3{
@@ -178,7 +177,7 @@ p {
             
             .main-points-block-title{
                 text-align: center;
-                padding-bottom: 10px;
+                padding-bottom: 5px;
                 h3{color: black !important;}
             }
             
